--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,10 @@
 /public/bundles/
 /var/
 /vendor/
+/temp/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
