--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,35 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/doctrine-orm": "^4.2",
+        "api-platform/symfony": "^4.2",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.18",
+        "doctrine/doctrine-migrations-bundle": "^3.5",
+        "doctrine/orm": "^3.5",
+        "nelmio/cors-bundle": "^2.5",
+        "phpdocumentor/reflection-docblock": "^5.6",
+        "phpstan/phpdoc-parser": "^2.3",
+        "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
+        "symfony/expression-language": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/http-client": "7.3.*",
+        "symfony/maker-bundle": "^1.64",
+        "symfony/monolog-bundle": "^3.10",
+        "symfony/property-access": "7.3.*",
+        "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
+        "symfony/security-bundle": "7.3.*",
+        "symfony/serializer": "7.3.*",
+        "symfony/twig-bundle": "7.3.*",
+        "symfony/validator": "7.3.*",
         "symfony/yaml": "7.3.*"
-    },
-    "require-dev": {
     },
     "config": {
         "allow-plugins": {
@@ -55,6 +73,16 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "phpstan": "vendor/bin/phpstan analyse --memory-limit=512M",
+        "phpstan:baseline": "vendor/bin/phpstan analyse --memory-limit=512M --generate-baseline",
+        "ecs": "vendor/bin/ecs check",
+        "ecs:fix": "vendor/bin/ecs check --fix",
+        "test": "vendor/bin/phpunit",
+        "check": [
+            "@phpstan",
+            "@ecs",
+            "@test"
         ]
     },
     "conflict": {
@@ -62,8 +90,19 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "7.3.*"
         }
+    },
+    "require-dev": {
+        "dama/doctrine-test-bundle": "^8.4",
+        "justinrainbow/json-schema": "^6.6",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-symfony": "^2.0",
+        "phpunit/phpunit": "^11.0",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/phpunit-bridge": "^7.3",
+        "symplify/easy-coding-standard": "^12.6",
+        "zenstruck/foundry": "^2.7"
     }
 }
